tests/ui/traits/copy-guessing.stderr
error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
  --> $DIR/copy-guessing.rs:23:13
   |
LL |     let f = || {
   |             ^^ this closure implements `FnOnce`, not `Fn`
LL |         // S being copy is critical for this to work
LL |         drop(e);
   |              - closure is `FnOnce` because it moves the variable `e` out of its environment
...
LL |     assert_impls_fn(&f);
   |     --------------- -- the requirement to implement `Fn` derives from here
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `assert_impls_fn`
  --> $DIR/copy-guessing.rs:18:25
   |
LL | fn assert_impls_fn<R,T: Fn()->R>(_: &T){}
   |                         ^^^^^^^ required by this bound in `assert_impls_fn`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0525`.
